.moon/cache/states/root/clippy-source/stderr.log
   Compiling diagram_tool v0.1.0 (/home/lewis/src/seshat/diagram_tool)
warning: diagram_tool@0.1.0: Generated index for 2248 icons across 13 providers
error[E0433]: failed to resolve: use of undeclared type `OrderedFloat`
   --> diagram_tool/src/ui/canvas/node_layer/node_element.rs:199:52
    |
199 |     let font_px = base.node.font_size.map_or(11.0, OrderedFloat::value) * base.zoom;
    |                                                    ^^^^^^^^^^^^ use of undeclared type `OrderedFloat`
    |
help: consider importing this struct
    |
  1 + use diagram_models::document::OrderedFloat;
    |

For more information about this error, try `rustc --explain E0433`.
warning: diagram_tool@0.1.0: Generated index for 2248 icons across 13 providers
error: could not compile `diagram_tool` (lib) due to 1 previous error